refactor(backend): refactor code